remade page with motion of batteries

--- a/index.html
+++ b/index.html
@@ -99,50 +99,62 @@
 
     <section id="skills" class="skills">
       <h2 class="skills_title">Мои навыки</h2>
-      <div class="content_skills" style="">
+      <div class="content_skills">
         <div class="battery_left">
           <h1 class="skills_title2">Навыки кодирования</h1>
 
+
+          <div class="battery_position">
+            <div>
+              <div>JavaScript</div>
+              <div class="remove_battery" style="width: 218px;">
+                <div class="imgbattery"><img src="Background_battery.png" alt=""></div>
+              </div>
+              <div class="battery"></div>
+            </div>
+            <div class="digitals"></div>
+          </div>
+
+          <div class="battery_position">
+            <div>
+              <div>Vue</div>
+              <div class="remove_battery" style="width: 218px;">
+                <div class="imgbattery"><img src="Background_battery.png" alt=""></div>
+              </div>
+              <div class="battery"></div>
+            </div>
+            <div class="digitals"></div>
+          </div>
+
+          
           <div class="battery_position">
             <div>
               <div>HTML</div>
-              <div class="remove_battery" style="width: 219px;">
-                <div class="imgbattery"><img src="public/Background_battery.png" style="width: 100%;" alt=""></div>
+              <div class="remove_battery" style="width: 235px;">
+                <div class="imgbattery"><img src="public/Background_battery.png"  alt=""></div>
               </div>
-              <!-- <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div> -->
+              <!-- <div class="imgbattery"><img src="Background_battery.png"    alt=""></div> -->
               <div class="battery"></div>
             </div>
-            <div class="digitals">85%</div>
+            <div class="digitals"></div>
           </div>
 
           <div class="battery_position">
             <div>
               <div>CSS</div>
-              <div class="remove_battery" style="width: 205px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              <div class="remove_battery" style="width: 235px;">
+                <div class="imgbattery"><img src="Background_battery.png"  alt=""></div>
               </div>
               <div class="battery"></div>
             </div>
-            <div class="digitals">75%</div>
-          </div>
-
-          <div class="battery_position">
-            <div>
-              <div>JavaScript</div>
-              <div class="remove_battery" style="width: 110px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
-              </div>
-
-              <div class="battery"></div>
-            </div>
-            <div class="digitals">45%</div>
+            <div class="digitals"></div>
           </div>
 
           <div class="battery_position">
             <div>
               <div>СУБД</div>
               <div class="remove_battery" style="width: 110px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                <div class="imgbattery"><img src="Background_battery.png"  alt=""></div>
               </div>
               <div class="battery"></div>
             </div>
@@ -157,7 +169,7 @@
             <div>
               <div>Web Design</div>
               <div class="remove_battery" style="width: 140px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                <div class="imgbattery"><img src="Background_battery.png"  alt=""></div>
               </div>
               <div class="battery"></div>
             </div>
@@ -168,7 +180,7 @@
             <div>
               <div>Web Development</div>
               <div class="remove_battery" style="width: 205px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                <div class="imgbattery"><img src="Background_battery.png"  alt=""></div>
               </div>
               <div class="battery"></div>
             </div>
@@ -177,9 +189,9 @@
 
           <div class="battery_position">
             <div>
-              <div>Bootstrap</div>
-              <div class="remove_battery" style="width: 110px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              <div>English</div>
+              <div class="remove_battery" style="width: 186px;">
+                <div class="imgbattery"><img src="Background_battery.png"  alt=""></div>
               </div>
               <div class="battery"></div>
             </div>
@@ -189,8 +201,8 @@
           <div class="battery_position">
             <div>
               <div>Что-то еще</div>
-              <div class="remove_battery" style="width: 48px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              <div class="remove_battery" style="width: 156px;">
+                <div class="imgbattery"><img src="Background_battery.png"  alt=""></div>
               </div>
               <div class="battery"></div>
             </div>
