--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/public/portfolio-icon-logo-illust.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
+  <title>Portfolio</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
       <div class="wrapper_header_logo">CODER. DESIGNER.</div>
     </section>
 
-    <div class="portPhoto"  ><img class="myPhoto" src="public/Screen_my_photo.jpg" alt=""></div>
+    <div class="portPhoto"  ><img class="myPhoto" src="public/MyPhoto.jpeg" alt=""></div>
 
     <section id="about" class="about">
       
