--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="battery_position">
             <div>
               <div>Vue</div>
-              <div class="remove_battery" style="width: 218px;">
+              <div class="remove_battery" style="width: 202px;">
                 <div class="imgbattery"><img src="Background_battery.png" alt=""></div>
               </div>
               <div class="battery"></div>
@@ -219,10 +219,15 @@
 
         <div class="projects_content_left">
 
+          <div class="projects_box" id="workInAcademy" >
+            <a class="project_design" href="https://ee30f393-60c7-461c-85a9-9976a2d2fa59-00-39k3q4mdrre2a.global.replit.dev/"> </a>
+            <div>Работа в академии 2<br>(HTML/CSS)</div>
+          </div>
+
           <div class="projects_box" style="margin-top: -40px;">
             <div><a href="https://belkud.github.io/Films/"><img id="fireball" style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
             </div>
-            <div>Фононовые темы (JavaScript)</div>
+            <div>Фоновые темы (JavaScript)</div>
           </div>
         
           <div class="projects_box" style="margin-top: -75px;">
@@ -241,41 +246,39 @@
             <div>Мини-проекты (JavaScript)</div>
           </div>
 
-          <div class="projects_box">
-            <div><a class="project_bootstrap" href="https://belkud.github.io/bootstrap/Settings.html"><img
-                  src="public/bootstrap-icon.svg" alt=""></a></div>
-            <div style="white-space: pre;">Мини-проект <br>(Bootstrap)</div>
-          </div>
 
           <div class="projects_box">
-            <div><a class="project_bootstrap" href="https://ee1f391b-be35-46f7-9933-ab799cdc0612-00-wfjohtfwxr78.global.replit.dev/Homework.html"><img
-                  src="public/bootstrap-icon.svg" alt=""></a></div>
-            <div>Расписание <br>(Bootstrap)</div>
+            <div><a class="project_bootstrap" href="https://belkud.github.io/Rocket/"><img
+                  src="public/Shattle.gif" style="width: 190px;"  alt=""></a></div>
+            <div>Мини игра <br>(JavaScript)</div>
           </div>
         </div>
 
         <div class="projects_content_right">
 
-          <div id="" class="projects_box" style="margin-top: 20px; position: relative;">
+          <div class="projects_box">
+            <a class="project_design" href="https://aae9c035-fdd3-4463-9b8b-1663e1d9b618-00-1ssvsw41b0qyy.global.replit.dev/"> </a>
+            <div>Работа в академии <br>(JavaScript)</div>
+          </div>
+
+
+          <div class="projects_box" style="margin-top: 20px; position: relative;">
             <div style="margin-left: 0px;"><a href="https://belkud.github.io/Asynchrony_in_JavaScript/"><img id="nodeServer" src="public/nodeServer.png" alt=""></a>
             </div>
             <div style="margin-top: 20px;">Серверная часть (JavaScript)</div>
           </div>
 
           <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
-            <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
+            <div style="margin-left: -90px;"><a href="https://belkud.github.io/Controlled_car/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
             </div>
             <div style="margin-top: 240px;">Управление машиной (JavaScript)</div>
           </div>
 
-          <div class="projects_box">
-            <a class="project_design" href="https://aae9c035-fdd3-4463-9b8b-1663e1d9b618-00-1ssvsw41b0qyy.global.replit.dev/"> </a>
-            <div>Адаптивный дизайн <br>(HTML/CSS)</div>
-          </div>
 
           <div class="projects_box">
-            <a class="project_design" href="https://ee30f393-60c7-461c-85a9-9976a2d2fa59-00-39k3q4mdrre2a.global.replit.dev/"> </a>
-            <div>Адаптивный дизайн 2<br>(HTML/CSS)</div>
+            <div><a class="project_bootstrap" href="https://belkud.github.io/bootstrap/Settings.html"><img
+                  src="public/bootstrap-icon.svg" alt=""></a></div>
+            <div style="white-space: pre;">Мини-проект <br>(Bootstrap)</div>
           </div>
 
           <div class="projects_box">
