--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
         <div class="projects_content_left">
 
           <div class="projects_box" id="workInAcademy" >
-            <a class="project_design" href="https://ee30f393-60c7-461c-85a9-9976a2d2fa59-00-39k3q4mdrre2a.global.replit.dev/"> </a>
-            <div>Работа в академии 2<br>(HTML/CSS)</div>
+            <a class="project_design" href="https://belkud.github.io/JavaScript/"> </a>
+            <div>Работа в академии<br>(Основы JavaScript)</div>
           </div>
 
           <div class="projects_box" style="margin-top: -40px;">
@@ -257,8 +257,8 @@
         <div class="projects_content_right">
 
           <div class="projects_box">
-            <a class="project_design" href="https://aae9c035-fdd3-4463-9b8b-1663e1d9b618-00-1ssvsw41b0qyy.global.replit.dev/"> </a>
-            <div>Работа в академии <br>(JavaScript)</div>
+            <a class="project_design" href="https://github.com/belkud/JavaScriptForStudents"> </a>
+            <div>Работа в академии <br>(Проекты на JavaScript)</div>
           </div>
 
 
