add correct links of projects

--- a/index.html
+++ b/index.html
@@ -247,26 +247,29 @@
           </div>
 
 
-          <div class="projects_box">
-            <div><a class="project_bootstrap" href="https://belkud.github.io/Rocket/"><img
-                  src="public/Shattle.gif" style="width: 190px;"  alt=""></a></div>
-            <div>Мини игра <br>(JavaScript)</div>
-          </div>
+
         </div>
 
         <div class="projects_content_right">
 
           <div class="projects_box">
-            <a class="project_design" href="https://github.com/belkud/JavaScriptForStudents"> </a>
+            <a class="project_design" href="https://belkud.github.io/JavaScriptForStudents/"> </a>
             <div>Работа в академии <br>(Проекты на JavaScript)</div>
           </div>
 
 
-          <div class="projects_box" style="margin-top: 20px; position: relative;">
+          <!-- <div class="projects_box" style="margin-top: 20px; position: relative;">
             <div style="margin-left: 0px;"><a href="https://belkud.github.io/Asynchrony_in_JavaScript/"><img id="nodeServer" src="public/nodeServer.png" alt=""></a>
             </div>
             <div style="margin-top: 20px;">Серверная часть (JavaScript)</div>
+          </div> -->
+          
+          <div class="projects_box">
+            <div><a class="project_bootstrap" href="https://belkud.github.io/Rocket/"><img
+                  src="public/Shattle.gif" style="width: 190px;"  alt=""></a></div>
+            <div>Мини игра <br>(JavaScript)</div>
           </div>
+
 
           <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
             <div style="margin-left: -90px;"><a href="https://belkud.github.io/Controlled_car/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
@@ -275,11 +278,11 @@
           </div>
 
 
-          <div class="projects_box">
+          <!-- <div class="projects_box">
             <div><a class="project_bootstrap" href="https://belkud.github.io/bootstrap/Settings.html"><img
                   src="public/bootstrap-icon.svg" alt=""></a></div>
             <div style="white-space: pre;">Мини-проект <br>(Bootstrap)</div>
-          </div>
+          </div> -->
 
           <div class="projects_box">
             <div style="margin-top: -10px;">
