--- a/index.html
+++ b/index.html
@@ -305,8 +305,7 @@
         <h5>Связаться со мной</h5>
         <div class="contacts_content">
           <div class="content_left">
-            <div class="hide_info">Если вам понравились мои работы заполните пожалуйста
-              форму или свяжитесь по нижеуказанным контактам.
+            <div class="hide_info">Если вам понравились мои работы свяжитесь пожалуйста по нижеуказанным контактам.
             </div>
             <div>Мои контакты:</div>
             <div class="telephone"><span>&#9990;</span>+79803734665<br><span>&#9990;</span>+79524350754</div>
@@ -324,15 +323,15 @@
           </div>
 
 
-          <div class="content_right">
+          <!-- <div class="content_right">
             <div>Отправьте сообщение</div>
             <input type="text" class="user_text" placeholder="Ваше имя" required>
             <input type="text" class="user_text" placeholder="Ваша почта" required>
             <textarea type="text" class="user_text" rows="10" cols="30" placeholder="Введите сообщение"></textarea>
             <button class="button_send">Send</button>
-          </div>
+          </div> -->
         </div>
-        <h6>All Rights Reserved 2023</h6>
+        <h6>All Rights Reserved 2025</h6>
       </div>
     </section>
 
