--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
             <div class="hide_info">Если вам понравились мои работы свяжитесь пожалуйста по нижеуказанным контактам.
             </div>
             <div>Мои контакты:</div>
-            <a style="filter: grayscale(0);" href="https://t.me/Belkud"><img width="55px" src="public/telegramm_logo.png" alt="" srcset=""></a>
-            <a href="https://vk.com/id19262696"><img width="49px" src="public/vk_logo.png" alt=""></a>
-            <a href="https://wa.me/79803734665">eee<img width="45px" src="public/whatsApp_logo2.png" alt=""></a>
-            <a href="https://wa.me/79803734665">eee<img width="45px" src="public/whatsApp_logo.png" alt=""></a>
+            <a href="https://t.me/Belkud"><img width="55px" src="public/telegramm_logo.png" alt="" srcset=""></a>
+            <a href="https://vk.com/id19262696"><img width="47px" src="public/vk_logo.png" alt=""></a>
+            <a href="https://wa.me/79803734665"><img width="45px" src="public/whats_app.png" alt=""></a>
+            <a href="https://wa.me/79803734665"><img width="65px" src="public/whatsApp_logo.png" alt=""></a>
             <div class="telephone"><span>&#9990;</span>+79803734665<br><span>&#9990;</span>+79524350754</div>
             <div class="e-mail"><a style="color: white;" href="https://mail.yandex.ru/"><span>&#9993;</span>vlad-belkud@yandex.ru</a> </div>
           </div>
