change_contacts_logo

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 
     <section id="contacts" class="contacts">
-      <video src="public/coverr-top-view-of-a-working-girl-4719-1080p.mp4" type="video" autoplay muted loop></video>
+      <video id="video" src="" type="video" autoplay muted loop></video>
       <div class="contacts_container">
         <h2>Связаться со мной</h4>
         <div class="contacts_content">
@@ -309,9 +309,11 @@
             <div class="hide_info">Если вам понравились мои работы свяжитесь пожалуйста по нижеуказанным контактам.
             </div>
             <div>Мои контакты:</div>
-            <a href="https://t.me/Belkud"><img width="50.5px" src="public/telegramm_logo.png" alt="" srcset=""></a>
-            <a href="https://wa.me/79803734665"><img width="45px" src="public/whats_app.png" alt=""></a>
-            <a href="https://vk.com/id19262696"><img width="47px" src="public/vk_logo.png" alt=""></a>
+            <div id="container_with_contact">
+              <a href="https://t.me/Belkud"><img style="width: 50.5px"  src="public/telegramm_logo.png" alt="" srcset=""></a>
+              <a href="https://wa.me/79803734665"><img style="margin-left: 54px; width: 45px;" width="45px" src="public/whats_app.png" alt=""></a>
+              <a href="https://vk.com/id19262696"><img style="margin-left: 103px; width: 47px;" src="public/vk_logo.png" alt=""></a>
+            </div>
             <!-- <a href="https://wa.me/79803734665"><img width="65px" src="public/whatsApp_logo.png" alt=""></a> -->
             <div class="telephone"><span>&#9990;</span>+79803734665<br><span>&#9990;</span>+79524350754</div>
             <div class="e-mail"><a style="color: white;" href="https://mail.yandex.ru/"><span>&#9993;</span>vlad-belkud@yandex.ru</a> </div>
