--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="projects_box">
             <div><a class="project_bootstrap" href="https://belkud.github.io/Rocket/"><img
                   src="public/Shattle.gif" style="width: 190px;"  alt=""></a></div>
-            <div>Мини игра <br>(JavaScript)</div>
+            <div>Мини игра <br>(TypeScript)</div>
           </div>
 
           <div class="projects_box" style="margin-top: -75px;">
