add info about me

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
 <section id="about" class="about">
       
-      
       <div class="about_left">
         <h2 class="content_title">Информация обо мне</h2>
    <div>
@@ -73,6 +72,9 @@
 <div>
   Мне посчастливилось работать в компьютерной академии TOP и в настоящее время я обучаю студентов программировать на JavaScript, работать с Vue.
 </div>
+<div>Языки: JavaScript (ES6+), TypeScript, HTML5, CSS3 <br>
+Фреймворки: Vue.js <br>
+Стилизация: SASS/SCSS, Tailwind CSS, Bootstrap</div>
 
 </div>
 
